Removed a bunch of styling, including all of Neat. New font.

--- a/404.md
+++ b/404.md
@@ -6,4 +6,4 @@ hide: true
 ---
 ## Seems you reached the end of the Internet...
 
-Sorry, the page you're looking for wasn't found. [Contact me](/contact) and maybe we can figure it out together.
+Sorry, the page you're looking for wasn't found. Please use the navigation at the top of the page or [check the homepage](/) for feature content.
