Set reverse ordering of case studies.

--- a/_portfolio/2017-03-opus.md
+++ b/_portfolio/2017-03-opus.md
@@ -1,6 +1,7 @@
 ---
 layout: portfolio
 title: Opus
+launched: 2017-03
 thumbnail-path: "img/projects/opus-home-new.jpg"
 short-description: Wordpress site building and front end development for international financial firm
 
