--- a/_portfolio/2017-03-opus.md
+++ b/_portfolio/2017-03-opus.md
@@ -21,6 +21,7 @@ Again looking to make the end user’s life easier, I took a page from my Drupal
 
 On the front end of things, I enjoyed working up some nice interactive components based on our designer’s great work. The expanding and filtering career listing is a good example of this, using some well thought-out Sass variables and the great [Isotope Javascript filtering library](http://isotope.metafizzy.co/).
 
+<!-- TODO: Use YouTube include here -->
 <iframe width="560" height="315" src="https://www.youtube.com/embed/uEi0Fdqexe0?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/m6HgoqYMdCU?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
