--- a/_posts/2016-06-09-sass-talk.md
+++ b/_posts/2016-06-09-sass-talk.md
@@ -16,6 +16,5 @@ If you write CSS styles professionally, you really should be using a pre-process
 
 Anyway, you can [check out my slideshow here](../../../assets/talk-sass/index.html) and embedded below. Credit again to [reveal.js](http://lab.hakim.se/reveal-js/#/) for powering the presentation.
 
-<div class="embed-container embed-container--tall">
-  <iframe class="revealjs--noteless" src='../../../assets/talk-sass/index.html'></iframe>
-</div>
+<!-- TODO: move iframe into an include component -->
+<iframe class="revealjs--noteless" src='../../../assets/talk-sass/index.html'></iframe>
