--- a/_posts/2018-09-24-jacked-up.md
+++ b/_posts/2018-09-24-jacked-up.md
@@ -9,19 +9,25 @@ tags:
 
 My site looks jacked up right now. If you're reading this in the future, picture... text. That's all it is. Black system font on a white background. The only real styling to speak of is keeping the text from going so wide it becomes unreadable. Why's this?
 
-A few months ago, I was looking at a job application someone submitted to my employer (I'm a team lead, and so do that) and realized that our repository of these applications included historical applications, including mine. I went and looked at it, including the comments that team leads at the time had made. Most were benign application review stuff and generally quite positive (I got the job). I then kept digging and searched my name in the team leads chat where my website and the phrase "kinda whack" came up.
+A few months ago, I was looking at a job application someone submitted to my employer (I'm a team lead, and so do that) and realized that our repository of these applications included historical applications, including mine. I went and looked at it, including the team leads' comments. Most were benign application review stuff and quite positive (I got the job). I then kept digging in Slack where my website and the phrase "kinda whack" came up. 😐 (The same person also said "make him an offer," so we cool.)
 
-They weren't wrong. It was weak and, very simply, I was tired of the old look. It didn't reflect my sensibilities anymore, the colors felt drab, and it looked like the design of a half-decent high school web designer.
+They weren't wrong. It was weak and, very simply, I am tired of the old look. It didn't reflect my sensibilities anymore, the colors felt drab, and it looked like the design of a half-decent high school web designer.
 
 A few mistakes I made:
 - Overthinking color based on color tools and articles.
 - Making the home page about content that _should_ be updated more often.
-- Making the "home" nav link disappear on the home page (rather than have it always be the logo)
-- Making more sections than I probably need.
+- Making the "home" nav link disappear on the home page (rather than have it consistently be the logo).
+- Building a fun Github API design feature (which I want to use again somehow) in the drabbest colors.
+- Making more site sections than I probably need.
+- Making the site too flat.
 - Seriously, those colors are not fun.
 
 A few parting screenshots:
-<!-- TODO: past images -->
+
+![Old mobile homepage]({{ site.baseurl }}/img/blog/2018-09-24/mobile-home.png)
+![Old desktop homepage]({{ site.baseurl }}/img/blog/2018-09-24/desk-home.png)
+![Old mobile work page]({{ site.baseurl }}/img/blog/2018-09-24/mobile-work.png)
+![Old desktop work page]({{ site.baseurl }}/img/blog/2018-09-24/desk-work.png)
 
 I honestly don't know that I'll come up with something eventually that won't be kinda whack. Design isn't an especially strong suit of mine. My plan is to play around, use some modern techniques, and keep it simple but playful.
 
@@ -36,7 +42,11 @@ Looking at a bunch of developer and designers' personal sites, I've come up with
 - https://daverupert.com
 
 ## The state of the website
-To help start fully fresh, I'm going back to the true basics. Other than setting system fonts, the max-width, and sticky footer, we're full-on semantic HTML elements as the W3C intended. Not a `div` in sight. I'll try to keep writing along the way to document some of my thinking and the mistakes I continue to make.
+To help start fully fresh, I'm going back to the true basics. Other than setting system fonts, the max-width, temporarily controlling image size, and sticky footer, we're full-on semantic HTML elements as the W3C intended. Not a `div` in sight. I'll try to keep writing along the way to document some of my thinking and the mistakes I continue to make.
 
-For now, I'll leave with a couple of shots of the current state of things:
-<!-- TODO: current images -->
+For now, I'll leave with a couple of shots of the current state of things for posterity:
+
+![Old mobile homepage]({{ site.baseurl }}/img/blog/2018-09-24/latest-home-mobile.png)
+![Old desktop homepage]({{ site.baseurl }}/img/blog/2018-09-24/latest-home-desk.png)
+![Old mobile work page]({{ site.baseurl }}/img/blog/2018-09-24/latest-work-mobile.png)
+![Old desktop work page]({{ site.baseurl }}/img/blog/2018-09-24/latest-work-desk.jpg)
