Adds redirect links for recent and more active posts

--- a/_posts/2018-09-24-jacked-up.md
+++ b/_posts/2018-09-24-jacked-up.md
@@ -5,6 +5,7 @@ tags:
 - career
 - personal
 - redesign
+redirect_from: /2018/09/24/jacked-up
 ---
 
 My site looks jacked up right now. If you're reading this in the future, picture... text. That's all it is. Black system font on a white background. The only real styling to speak of is keeping the text from going so wide it becomes unreadable. Why's this?
