Adds redirect URLs for old posts

--- a/_posts/2016-06-09-sass-talk.md
+++ b/_posts/2016-06-09-sass-talk.md
@@ -8,6 +8,7 @@ tags:
 - Front end development
 - web development
 - career
+redirect_from: /2016/06/09/sass-talk
 ---
 
 I recently had the opportunity to present to our local web development Meetup group again. This time I gave an introduction to my favorite front end partner, Sass.
