--- a/_posts/2015-11-22-going-pro.md
+++ b/_posts/2015-11-22-going-pro.md
@@ -4,6 +4,7 @@ title: Going pro
 tags:
 - career
 - personal
+redirect_from: /2015/11/22
 ---
 
 So much for [blogging little things](/2015/08/25/blog-little-things), eh? Normally I would emphatically ignore my blogging absence, since a) "sorry I haven't been blogging" posts are the worst and b) approximately zero people will read this. In this case, it's the perfect segue into what I want to talk about... assuming perfect segues begin with pointing them out explicitly...
